feat: add more integration tests
