# weather-backend/Controllers/PhoneNumberController.cs
@@ -1,10 +1,11 @@
 ﻿using Microsoft.AspNetCore.Mvc;
+using weather_backend.Models.PhoneService;
 using weather_backend.Services;
 
 namespace weather_backend.Controllers
 {
     [ApiController]
-    [Route("[controller]")]
+    [Route("phone-number")]
     public class PhoneNumberController : ControllerBase
     {
         private readonly IPhoneService _phoneService;
@@ -15,10 +16,20 @@ namespace weather_backend.Controllers
         }
 
         [HttpGet]
-        [Route("/phone")]
+        [Route("phone")]
+        [ProducesResponseType(typeof(ValidatePhoneNumberModel), 200)]
+        [ProducesResponseType(typeof(string), 400)]
         public IActionResult ValidatePhoneNumber([FromQuery(Name = "phone")] string phone)
         {
-            return Ok(_phoneService.ValidatePhoneNumber(phone));
+            try
+            {
+                var validationResult = _phoneService.ValidatePhoneNumber(phone);
+                return Ok(validationResult);
+            }
+            catch (System.Exception e)
+            {
+                return BadRequest(e.Message);
+            }
         }
     }
 }
